feat: Complete localization audit and template restructure
- Comprehensive localization key audit across all modules and templates
- Updated en.json with missing and corrected localization keys
- Restructured actor sheet templates with new section-based partials
- Removed deprecated template files and consolidated functionality
- Updated all Handlebars templates for consistent localization usage
- Enhanced code quality and Foundry v13 API compliance
- Improved template organization and maintainability

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,87 +1,204 @@
 {
   "l5r4": {
-    "mechanics": {
-      "rings": {
-        "ring": "Ring",
-        "fire": "Fire",
-        "water": "Water",
-        "air": "Air",
-        "earth": "Earth",
-        "void": "Void",
-        "voidPoints": "Void Points",
-        "all": "All"
-      },
-      "traits": {
-        "sta": "Stamina",
-        "wil": "Willpower",
-        "str": "Strength",
-        "per": "Perception",
-        "ref": "Reflexes",
-        "awa": "Awareness",
-        "agi": "Agility",
-        "int": "Intelligence"
-      },
-      "rolls": {
-        "success": "Success",
-        "failure": "Failure",
-        "explodesOn": "Explodes On",
-        "withEmphasis": "with Emphasis",
-        "unskilled": "Unskilled",
-        "traitRoll": "Trait Roll",
-        "ringRoll": "Ring Roll",
-        "skillRoll": "Skill Roll",
-        "damageRoll": "Damage Roll",
-        "attackRoll": "Attack Roll",
-        "spellCasting": "Spell Casting Roll",
-        "unskilledRoll": "Unskilled Roll",
-        "emphasis": "Emphasis",
-        "raise": "Raise",
-        "raises": "Raises",
-        "formula": "Formula",
-        "result": "Result"
-      },
-      "combat": {
-        "attack": "Attack",
-        "melee": "Melee",
-        "ranged": "Ranged",
-        "multiplier": "Multiplier",
-        "woundPenalty": "Wound Penalty",
-        "armorTnBonus": "Armor TN Bonus",
-        "targeting": {
-          "vs": "vs",
-          "multipleTargets": "targets - TN not auto-set"
+    "ui": {
+      "mechanics": {
+        "rings": {
+          "ring": "Ring",
+          "fire": "Fire",
+          "water": "Water",
+          "air": "Air",
+          "earth": "Earth",
+          "void": "Void",
+          "voidPoints": "Void Points",
+          "all": "All"
+        },
+        "traits": {
+          "sta": "Stamina",
+          "wil": "Willpower",
+          "str": "Strength",
+          "per": "Perception",
+          "ref": "Reflexes",
+          "awa": "Awareness",
+          "agi": "Agility",
+          "int": "Intelligence"
+        },
+        "rolls": {
+          "success": "Success",
+          "failure": "Failure",
+          "explodesOn": "Explodes On",
+          "withEmphasis": "with Emphasis",
+          "unskilled": "Unskilled",
+          "traitRoll": "Trait Roll",
+          "ringRoll": "Ring Roll",
+          "skillRoll": "Skill Roll",
+          "damageRoll": "Damage Roll",
+          "attackRoll": "Attack Roll",
+          "spellCasting": "Spell Casting Roll",
+          "unskilledRoll": "Unskilled Roll",
+          "emphasis": "Emphasis",
+          "raise": "Raise",
+          "raises": "Raises",
+          "formula": "Formula",
+          "result": "Result"
+        },
+        "combat": {
+          "attack": "Attack",
+          "melee": "Melee",
+          "ranged": "Ranged",
+          "multiplier": "Multiplier",
+          "woundPenalty": "Wound Penalty",
+          "armorTnBonus": "Armor TN Bonus",
+          "targeting": {
+            "vs": "vs",
+            "multipleTargets": "targets - TN not auto-set"
+          }
+        },
+        "wounds": {
+          "wounds": "Wounds",
+          "armorTn": "Armor TN",
+          "armorTnBase": "Armor TN Base",
+          "armorReduction": "Reduction",
+          "woundLevel": "Wounds Level",
+          "woundsSuffered": "Wounds Suffered",
+          "maxWounds": "Max Wounds",
+          "penalty": "Penalty",
+          "woundHealRate": "Rate of Wound Heal",
+          "healRateFormula": "x 2 +",
+          "healthy": "Healthy",
+          "nicked": "Nicked",
+          "grazed": "Grazed",
+          "hurt": "Hurt",
+          "injured": "Injured",
+          "crippled": "Crippled",
+          "down": "Down",
+          "out": "Out"
+        },
+        "stances": {
+          "pending": "Pending",
+          "attack": "Attack Stance",
+          "fullAttack": "Full Attack Stance",
+          "defense": "Defense Stance",
+          "fullDefense": "Full Defense Stance",
+          "center": "Center Stance",
+          "fullDefenseDescription": "Make a Defense/Reflexes roll. Add half the result (rounded up) to your Armor TN for the duration of this stance.",
+          "cannotAttackDefense": "Cannot attack while in Defense Stance",
+          "fullAttackBonus": "Full Attack Stance: +2k1"
         }
       },
-      "wounds": {
-        "wounds": "Wounds",
-        "armorTn": "Armor TN",
-        "armorTnBase": "Armor TN Base",
-        "armorReduction": "Reduction",
-        "woundLevel": "Wounds Level",
-        "woundsSuffered": "Wounds Suffered",
-        "maxWounds": "Max Wounds",
-        "penalty": "Penalty",
-        "woundHealRate": "Rate of Wound Heal",
-        "healthy": "Healthy",
-        "nicked": "Nicked",
-        "grazed": "Grazed",
-        "hurt": "Hurt",
-        "injured": "Injured",
-        "crippled": "Crippled",
-        "down": "Down",
-        "out": "Out"
+      "common": {
+        "roll": "Roll",
+        "cancel": "Cancel",
+        "ok": "OK",
+        "none": "None",
+        "keep": "Keep",
+        "raise": "Raise",
+        "init": "Initiative",
+        "bonus": "Bonus",
+        "mod": "Modifier",
+        "rate": "Rate",
+        "current": "Current",
+        "total": "Total",
+        "left": "left",
+        "close": "Close",
+        "toChat": "To Chat",
+        "effect": "Effect",
+        "simple": "Simple",
+        "complex": "Complex",
+        "free": "Free",
+        "action": "Action",
+        "edit": "Edit",
+        "delete": "Delete",
+        "name": "Name",
+        "description": "Description",
+        "notes": "Notes",
+        "activeEffects": "Active Effects",
+        "new": "New",
+        "disabled": "disabled",
+        "rank": "Rank",
+        "clan": "Clan",
+        "school": "School",
+        "xp": "Experience Points",
+        "insight": "Insight",
+        "skill": "Skill",
+        "damage": "Damage",
+        "type": "Type",
+        "ring": "Ring",
+        "mastery": "Mastery",
+        "tn": "TN",
+        "cost": "Cost"
       },
-      "stances": {
-        "fullDefense": "Full Defense",
-        "fullDefenseDescription": "Make a Defense/Reflexes roll. Add half the result (rounded up) to your Armor TN for the duration of this stance.",
-        "cannotAttackDefense": "Cannot attack while in Defense Stance",
-        "fullAttackBonus": "Full Attack Stance: +2k1"
+      "sheets": {
+        "bio": "Background",
+        "skills": "Skills",
+        "addSkill": "Add Skill",
+        "weapons": "Weapons",
+        "addWeapon": "Add Weapon",
+        "armor": "Armor",
+        "addArmor": "Add Armor",
+        "items": "Items",
+        "addItem": "Add Item",
+        "notes": "Notes",
+        "spell": "Spell",
+        "spells": "Spells",
+        "addSpell": "Add Spell",
+        "single": "Technique",
+        "plural": "Techniques",
+        "addTechnique": "Add Technique",
+        "armors": "Armors",
+        "advantage": "Advantage",
+        "advantages": "Advantages",
+        "addAdvantage": "Add Advantage",
+        "disadvantage": "Disadvantage",
+        "disadvantages": "Disadvantages",
+        "addDisadvantage": "Add Disadvantage",
+        "kata": "Kata",
+        "katas": "Katas",
+        "addKata": "Add Kata",
+        "kiho": "Kiho",
+        "kihos": "Kihos",
+        "addKiho": "Add Kiho",
+        "tattoo": "Tattoo",
+        "tattoos": "Tattoos",
+        "addTattoo": "Add Tattoo",
+        "addTechSpell": "Add Technique/Spell",
+        "addAdvDis": "Add Advantage/Disadvantage",
+        "addEquipment": "Add Equipment",
+        "equipment": "Equipment",
+        "rulesSummary": "Rules Summary",
+        "description": "Description",
+        "woundLevels": "Wound Levels",
+        "spellSlots": "Spell Slots",
+        "demands": "Demands",
+        "traits": "Traits",
+        "itemSheetTitle": "Item Sheet",
+        "xpModal": "Experience"
+      },
+      "notifications": {
+        "actorNotFound": "Actor not found for damage roll",
+        "noPermissionDamage": "You don't have permission to roll damage for this actor",
+        "noValidWeapon": "No valid weapon found for attack roll",
+        "fullDefenseRollFailed": "Failed to make Full Defense roll. Please roll manually.",
+        "invalidRingForSpell": "Invalid ring for spell slot: {ring}",
+        "noActorForVoid": "No actor available for void point spending",
+        "deleteEffect": "Failed to delete effect.",
+        "schoolRankZero": "You can't cast a spell with School Rank reduced to zero",
+        "noSpellSlots": "You ran out of spell slots for this ring"
+      },
+      "chat": {
+        "traitRoll": "Trait Roll {trait}",
+        "ringRoll": "Ring Roll {ring}",
+        "skillRoll": "Skill Roll {skill}",
+        "damageRoll": "Damage Roll {weapon}",
+        "rollName": "Roll {roll}"
+      },
+      "hints": {
+        "leftRightToAdjust": "Left and Right to Adjust",
+        "leftClickPlusRightClickMinus": "Left click: +1, Right click: -1"
       }
     },
     "character": {
       "skills": {
         "properties": {
-          "rank": "Rank",
           "type": "Type",
           "trait": "Trait",
           "emphasis": "Emphases",
@@ -155,7 +272,7 @@
         "honorPoints": "Honor Points",
         "gloryRank": "Glory",
         "gloryPoints": "Glory Points",
-        "statusRank": "Status",
+        "statusRank": "Status Rank",
         "statusPoints": "Status Points",
         "shadowRank": "Shadowland Taint",
         "shadowPoints": "Shadow Points",
@@ -178,7 +295,6 @@
         "voidChange": "Void {from}→{to}",
         "skillCreate": "{name} 0→{rank}",
         "skillChange": "{name} {from}→{to}",
-        "type": "Type",
         "breakdown": {
           "base": "Base",
           "disadvantagesGrant": "Disadvantages grant",
@@ -188,6 +304,14 @@
           "void": "Void",
           "skills": "Skills",
           "advantages": "Advantages"
+        },
+        "fallbackLabels": {
+          "advantage": "Advantage",
+          "disadvantage": "Disadvantage",
+          "traitIncrease": "Trait Increase",
+          "voidIncrease": "Void Increase",
+          "skillCreated": "Skill Created",
+          "skillIncreased": "Skill Increased"
         }
       }
     },
@@ -200,6 +324,12 @@
         "arrow": "Arrow",
         "typeWeapon": "Weapon",
         "typeBow": "Bow",
+        "associatedSkill": "Associated Skill",
+        "fallback": "Fallback",
+        "skillExample": {
+          "bow": "Kyujutsu",
+          "weapon": "Kenjutsu"
+        },
         "arrows": {
           "armor": "Armor Piercing",
           "flesh": "Flesh Cutter",
@@ -217,9 +347,7 @@
         "reduction": "Reduction",
         "equipped": "Equipped"
       },
-      "general": {
-        "cost": "Cost"
-      }
+      "general": {}
     },
     "magic": {
       "spells": {
@@ -240,108 +368,19 @@
         "mystic": "Mystic"
       },
       "techniques": {
-        "technique": "Technique",
-        "techniques": "Techniques"
-      }
-    },
-    "ui": {
-      "common": {
-        "roll": "Roll",
-        "cancel": "Cancel",
-        "ok": "Ok",
-        "none": "None",
-        "keep": "Keep",
-        "raise": "Raise",
-        "init": "Initiative",
-        "bonus": "Bonus",
-        "mod": "Modifier",
-        "rate": "Rate",
-        "current": "Current",
-        "total": "Total",
-        "toChat": "To Chat",
-        "effect": "Effect",
-        "simple": "Simple",
-        "complex": "Complex",
-        "free": "Free",
-        "action": "Action",
-        "edit": "Edit",
-        "delete": "Delete",
-        "enableDisable": "Enable/Disable",
-        "new": "New",
-        "apply": "Apply",
-        "name": "Name",
-        "rank": "Rank",
-        "clan": "Clan",
-        "school": "School",
-        "xp": "Experience Points",
-        "insight": "Insight",
-        "skill": "Skill",
-        "damage": "Damage",
-        "type": "Type",
-        "ring": "Ring",
-        "mastery": "Mastery",
-        "tn": "TN"
-      },
-      "sheets": {
-        "bio": "Background",
-        "skills": "Skills",
-        "addSkill": "Add Skill",
-        "weapons": "Weapons",
-        "addWeapon": "Add weapon",
-        "addEquipment": "Add Equipment",
-        "notes": "Notes",
-        "spell": "Spell",
-        "spells": "Spells",
-        "armors": "Armors",
-        "addArmor": "Add Armor",
-        "advantage": "Advantage",
-        "advantages": "Advantages",
-        "disadvantage": "Disadvantage",
-        "disadvantages": "Disadvantages",
-        "kata": "Kata",
-        "katas": "Katas",
-        "kiho": "Kiho",
-        "kihos": "Kihos",
-        "addTechSpell": "Add Technique/Spell",
-        "addAdv/Dis": "Add Advantage/Disadvantage",
-        "equipment": "Equipment",
-        "rulesSummary": "Rules Summary",
-        "description": "Description",
-        "nrWoundLvls": "Wound Levels",
-        "spellSlots": "Spell Slots",
-        "demands": "Demands",
-        "tattoo": "Tattoo",
-        "tattoos": "Tattoos",
-        "traits": "Traits",
-        "itemSheetTitle": "Item Sheet",
-        "xpModal": "Experience"
-      },
-      "hints": {
-        "leftRightToAdjust": "Left and Right to Adjust",
-        "leftClickPlusRightClickMinus": "Left click: +1, Right click: -1"
+        "single": "Technique",
+        "plural": "Techniques"
       }
     },
     "system": {
-      "chat": {
-        "traitRoll": "Trait Roll {trait}",
-        "ringRoll": "Ring Roll {ring}",
-        "skillRoll": "Skill Roll {skill}",
-        "damageRoll": "Damage Roll {weapon}",
-        "rollName": "Roll {roll}"
-      },
-      "errors": {
-        "deleteEffect": "Failed to delete effect.",
-        "schoolRankZero": "You can't cast a spell with School Rank reduced to zero",
-        "noSpellSlots": "You ran out of spell slots for this ring"
-      },
-      "warnings": {
-        "noActorForVoid": "No actor available to spend Void Points."
-      },
       "migration": {
         "itemTypeChangeInfo": "L5R4: migrated {count} Item(s) from \"commonItem\" to \"item\".",
         "itemTypeChangeError": "L5R4: Item type migration failed. See console for details.",
         "iconsUpdated": "L5R4 Migration: Updated {count} world image path(s).",
         "compendiumIconsUpdated": "L5R4 Migration (Compendia): Updated {count} image path(s)."
+      },
+      "errors": {
+        "deleteEffect": "Failed to delete effect."
       }
     },
     "world": {
@@ -349,128 +388,6 @@
         "koku": "Koku",
         "bu": "Bu",
         "zeni": "Zeni"
-      },
-      "emphases": {
-        "ambush": "Ambush",
-        "anatomy": "Anatomy",
-        "antidotes": "Antidotes",
-        "architecture": "Architecture",
-        "armorsmithing": "Armorsmithing",
-        "artwork": "Artwork",
-        "assessment": "Assessment",
-        "astrology": "Astrology",
-        "biwa": "Biwa",
-        "blacksmithing": "Blacksmithing",
-        "bonsai": "Bonsai",
-        "bowyer": "Bowyer",
-        "brewing": "Brewing",
-        "bureaucracy": "Bureaucracy",
-        "bushido": "Bushido",
-        "carpentry": "Carpentry",
-        "cartography": "Cartography",
-        "cipher": "Cipher",
-        "clan": "Clan",
-        "climbing": "Climbing",
-        "conceal": "Conceal",
-        "construction": "Construction",
-        "conversation": "Conversation",
-        "cooking": "Cooking",
-        "courtesy": "Courtesy",
-        "dance": "Dance",
-        "daiTsuchi": "Dai Tsuchi",
-        "deceit": "Deceit",
-        "disease": "Disease",
-        "documents": "Documents",
-        "dogs": "Dogs",
-        "elements": "Elements",
-        "escape": "Escape",
-        "falcons": "Falcons",
-        "farming": "Farming",
-        "fasting": "Fasting",
-        "fishing": "Fishing",
-        "flute": "Flute",
-        "fortunesAndWinds": "Fortunes & Winds",
-        "gaijinCulture": "Gaijin Culture",
-        "gaijinRidingHorse": "Gaijin Riding Horse",
-        "gardening": "Gardening",
-        "ghosts": "Ghosts",
-        "go": "Go",
-        "grappling": "Grappling",
-        "greatClan": "Great Clan",
-        "heraldry": "Heraldry",
-        "herbalism": "Herbalism",
-        "highRokugani": "High Rokugani",
-        "history": "History",
-        "honesty": "Honesty",
-        "horses": "Horses",
-        "ikebana": "Ikebana",
-        "improvisedWeapons": "Improvised Weapons",
-        "importune": "Importune",
-        "interrogation": "Interrogation",
-        "katana": "Katana",
-        "kawaru": "Kawaru",
-        "kemari": "Kemari",
-        "knotWork": "Knot-work",
-        "kusarigama": "Kusarigama",
-        "kyoketsuShogi": "Kyoketsu-shogi",
-        "letters": "Letters",
-        "manipulation": "Manipulation",
-        "manrikigusari": "Manrikigusari",
-        "martialArts": "Martial Arts",
-        "masonry": "Masonry",
-        "masakari": "Masakari",
-        "mining": "Mining",
-        "navigation": "Navigation",
-        "nature": "Nature",
-        "ninjaTo": "Ninja-to",
-        "noDachi": "No-dachi",
-        "nonHumans": "Non-humans",
-        "nonhumanCulture": "Nonhuman Culture",
-        "omens": "Omens",
-        "ono": "Ono",
-        "oratory": "Oratory",
-        "painting": "Painting",
-        "parangu": "Parangu",
-        "personalSeals": "Personal Seals",
-        "pickPocket": "Pick Pocket",
-        "poetry": "Poetry",
-        "poison": "Poison",
-        "pottery": "Pottery",
-        "prestidigitation": "Prestidigitation",
-        "puppeteer": "Puppeteer",
-        "rhetoric": "Rhetoric",
-        "rokuganiPony": "Rokugani Pony",
-        "running": "Running",
-        "sadane": "Sadane",
-        "samisen": "Samisen",
-        "scimitar": "Scimitar",
-        "search": "Search",
-        "shadowing": "Shadowing",
-        "shadowlands": "Shadowlands",
-        "shipbuilding": "Shipbuilding",
-        "shogi": "Shogi",
-        "shugenja": "Shugenja",
-        "siege": "Siege",
-        "song": "Song",
-        "spiritRealms": "Spirit Realms",
-        "spellCasting": "Spell Casting",
-        "spellResearch": "Spell Research",
-        "storytelling": "Storytelling",
-        "survival": "Survival",
-        "swimming": "Swimming",
-        "tailoring": "Tailoring",
-        "tattooing": "Tattooing",
-        "tetsubo": "Tetsubo",
-        "theology": "Theology",
-        "throwing": "Throwing",
-        "tracking": "Tracking",
-        "trailblazing": "Trailblazing",
-        "utakuSteed": "Utaku Steed",
-        "voidRecovery": "Void Recovery",
-        "wakizashi": "Wakizashi",
-        "war": "War",
-        "weaponsmithing": "Weaponsmithing",
-        "weaving": "Weaving"
       }
     }
   },
@@ -525,11 +442,6 @@
     }
   },
   "EFFECT": {
-    "attackStance": "Attack Stance",
-    "fullAttackStance": "Full Attack Stance",
-    "defenseStance": "Defense Stance",
-    "fullDefenseStance": "Full Defense Stance",
-    "centerStance": "Center Stance",
     "blinded": "Blinded",
     "dazed": "Dazed",
     "dead": "Dead",
