feat: Add Cost field to Kata and Kiho items with full XP system integration
- Add cost field to kata and kiho item schemas with default value 0
- Add cost input fields to kata and kiho item sheet templates
- Separate XP calculations for advantages, kata, and kiho categories
- Update Experience Summary to show individual breakdown categories
- Fix XP Manager display logic for proper item type categorization
- Add disadvantages to XP Manager purchase history with negative costs
- Implement conditional display to hide empty XP categories
- Add localization keys for kata and kiho breakdown categories
- Update JSDoc documentation for all XP calculation changes
- Maintain backwards compatibility for existing items

Files modified:
- template.json: Added cost fields to kata/kiho schemas
- templates/item/kata.hbs: Added cost input field
- templates/item/kiho.hbs: Added cost input field
- module/documents/actor.js: Separated XP calculations, updated breakdown
- module/apps/xp-manager.js: Fixed display logic, added disadvantages
- lang/en.json: Added kata/kiho breakdown localization keys
- templates/apps/xp-manager.hbs: Conditional category display

Closes: Kata/Kiho cost tracking feature request
Fixes: XP categorization and display issues

--- a/lang/en.json
+++ b/lang/en.json
@@ -141,8 +141,8 @@
         "spell": "Spell",
         "spells": "Spells",
         "addSpell": "Add Spell",
-        "single": "Technique",
-        "plural": "Techniques",
+        "technique": "Technique",
+        "techniques": "Techniques",
         "addTechnique": "Add Technique",
         "armors": "Armors",
         "advantage": "Advantage",
@@ -297,13 +297,15 @@
         "skillChange": "{name} {from}→{to}",
         "breakdown": {
           "base": "Base",
-          "disadvantagesGrant": "Disadvantages grant",
+          "disadvantagesGrant": "Disadvantages",
           "cap10": "(cap 10)",
           "manualAdjustments": "Manual adjustments",
           "traits": "Traits",
           "void": "Void",
           "skills": "Skills",
-          "advantages": "Advantages"
+          "advantages": "Advantages",
+          "kata": "Kata",
+          "kiho": "Kiho"
         },
         "fallbackLabels": {
           "advantage": "Advantage",
