feat: Major UI/UX improvements and localization overhaul
- Implement unified item creation dialog with improved UX
- Add comprehensive localization audit and template restructure
- Streamline language files by removing unused/duplicate keys
- Enhance actor sheet styling with improved item list layouts
- Add new chat service for better message handling
- Refactor template partials for better maintainability
- Update CSS with modern styling improvements
- Improve NPC sheet functionality and layout
- Add unified item creation templates and dialogs
- Optimize template preloading and service organization

Files changed: 33 files with 751 additions, 2135 deletions
Major components: Templates, Localization, Styling, Services

--- a/lang/en.json
+++ b/lang/en.json
@@ -129,12 +129,15 @@
       },
       "sheets": {
         "bio": "Background",
+        "skill": "Skill",
         "skills": "Skills",
         "addSkill": "Add Skill",
+        "weapon": "Weapon",
         "weapons": "Weapons",
         "addWeapon": "Add Weapon",
         "armor": "Armor",
         "addArmor": "Add Armor",
+        "item": "Item",
         "items": "Items",
         "addItem": "Add Item",
         "notes": "Notes",
@@ -164,6 +167,8 @@
         "addAdvDis": "Add Advantage/Disadvantage",
         "addEquipment": "Add Equipment",
         "equipment": "Equipment",
+        "abilities": "Abilities",
+        "character": "Character",
         "rulesSummary": "Rules Summary",
         "description": "Description",
         "woundLevels": "Wound Levels",
@@ -193,7 +198,8 @@
       },
       "hints": {
         "leftRightToAdjust": "Left and Right to Adjust",
-        "leftClickPlusRightClickMinus": "Left click: +1, Right click: -1"
+        "leftClickPlusRightClickMinus": "Shift+Left click: +1, Shift+Right click: -1",
+        "shiftClickRankPoints": "Shift+Click: ±0.1, Shift+Ctrl+Click: ±1.0"
       }
     },
     "character": {
