feat: improve attack roll TN visibility and add localization support
- Enhanced attack roll display to show target info consistently
- Failed attacks now show 'Missed' instead of 'Failure' for better UX
- Target information always visible regardless of attack success
- TN information appropriately shown/hidden based on attack outcome
- Added 'missed' localization key across all language files
- Added German and Russian language support
- Updated chat template for improved attack result display
- Enhanced XP manager functionality and error handling
- Added migration support for system updates

Improves L5R4 rule compliance and user experience for attack rolls.

--- a/lang/en.json
+++ b/lang/en.json
@@ -25,6 +25,7 @@
         "rolls": {
           "success": "Success",
           "failure": "Failure",
+          "missed": "Missed",
           "explodesOn": "Explodes On",
           "withEmphasis": "with Emphasis",
           "unskilled": "Unskilled",
